--- a/cuplibya25/index.html
+++ b/cuplibya25/index.html
@@ -161,6 +161,16 @@
 
     <main class="container mx-auto p-4 md:p-8">
 
+        <section id="tournament-poster" class="my-12">
+            <h2 class="section-title">بوستر البطولة الرسمي</h2>
+            <div class="bg-white p-6 rounded-xl shadow-lg text-center flex flex-col items-center">
+                <img src="https://absily.github.io/postercup.jpg" alt="بوستر بطولة كأس ليبيا لكرة السلة على الكراسي المتحركة 2025" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/333333?text=Poster+Not+Found';" class="w-full max-w-2xl h-auto rounded-lg shadow-md mb-4">
+                <p class="text-lg font-semibold text-slate-700">
+                    بوستر بطولة كأس ليبيا لكرة السلة على الكراسي المتحركة 2025
+                </p>
+            </div>
+        </section>
+
         <section id="key-facts" class="my-12">
             <h2 class="section-title">حقائق سريعة عن البطولة</h2>
             <p class="section-subtitle">إحصائيات هامة تسلط الضوء على حجم ومشاركة بطولة كأس ليبيا لكرة السلة على الكراسي المتحركة.</p>
@@ -223,7 +233,7 @@
             <h2 class="section-title">موقع البطولة على الخريطة</h2>
             <p class="section-subtitle">يمكنكم العثور على موقع القاعة الكبرى بالمدينة الرياضية في طرابلس عبر الخريطة التفاعلية أدناه.</p>
             <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3419.006423984107!2d13.166347999999999!3d32.8906979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13a89047970d473b%3A0xc3f3c4d7f7e9a8f4!2sMartyrs%20Square!5e0!3m2!1sen!2sly!4v1718302000000!5m2!1sen!2sly" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3419.006423984107!2d13.166347999999999!3d32.8906979!2m3!1f0!2f0!1f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13a89047970d473b%3A0xc3f3c4d7f7e9a8f4!2sMartyrs%20Square!5e0!3m2!1sen!2sly!4v1718302000000!5m2!1sen!2sly" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
 
