--- a/gerfinal/index.html
+++ b/gerfinal/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -144,6 +144,42 @@
                     <li class="flex justify-center items-center">🥉 <span class="mx-3">بريطانيا</span> (الميدالية البرونزية)</li>
                     <li class="flex justify-center items-center">4. <span class="mx-3">أستراليا</span></li>
                 </ol>
+            </section>
+
+            <section class="bg-white/10 rounded-2xl p-6 shadow-2xl backdrop-blur-sm border border-white/20">
+                <h2 class="text-3xl font-bold text-center mb-6 text-[#FF8906]">الأداء الأفريقي: نظرة على مشاركة جنوب أفريقيا</h2>
+                <p class="text-center mb-8 max-w-3xl mx-auto">شهدت البطولة مشاركة فريق أفريقي واحد فقط، حيث قدمت جنوب أفريقيا أداءً أظهر التحديات والفرص للفرق الأفريقية في المنافسات العالمية.</p>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-white text-center">
+                    <div class="bg-white/5 p-4 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">جنوب أفريقيا 35 - 87 الولايات المتحدة الأمريكية</h3>
+                        <p class="text-sm text-[#B8C1EC]">خسارة بفارق كبير أمام قوة عالمية.</p>
+                    </div>
+                    <div class="bg-white/5 p-4 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">جنوب أفريقيا 17 - 100 بريطانيا</h3>
+                        <p class="text-sm text-[#B8C1EC]">أكبر خسارة لجنوب أفريقيا، تظهر الفجوة مع الفرق الأوروبية الكبرى.</p>
+                    </div>
+                     <div class="bg-white/5 p-4 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">جنوب أفريقيا 35 - 62 اليابان</h3>
+                        <p class="text-sm text-[#B8C1EC]">تحدٍ آخر أمام قوة آسيوية بارزة.</p>
+                    </div>
+                     <div class="bg-white/5 p-4 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">جنوب أفريقيا 20 - 101 إيطاليا</h3>
+                        <p class="text-sm text-[#B8C1EC]">خسارة بفارق كبير آخر تؤكد صعوبة المنافسة.</p>
+                    </div>
+                    <div class="bg-white/5 p-4 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">جنوب أفريقيا 64 - 54 تايلاند</h3>
+                        <p class="text-3xl font-black text-[#FF8906]">فوز مثير! أول انتصار لجنوب أفريقيا.</p>
+                    </div>
+                    <div class="bg-white/5 p-4 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">جنوب أفريقيا 55 - 62 فريق Z</h3>
+                        <p class="text-sm text-[#B8C1EC]">مباراة متقاربة تظهر تحسنًا في الأداء.</p>
+                    </div>
+                    <div class="bg-white/5 p-4 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">جنوب أفريقيا 49 - 44 تايلاند</h3>
+                        <p class="text-3xl font-black text-[#FF8906]">فوز ثانٍ! أداء قوي في نهاية البطولة.</p>
+                    </div>
+                </div>
+                <p class="text-center mt-6 max-w-3xl mx-auto text-[#B8C1EC]">تُظهر نتائج جنوب أفريقيا في هذه البطولة أنها واجهت تحديات كبيرة أمام القوى العالمية، حيث تعرضت لخسائر بفروقات كبيرة أمام فرق مثل الولايات المتحدة الأمريكية وبريطانيا وإيطاليا. ومع ذلك، حققت جنوب أفريقيا انتصارين مهمين ضد تايلاند، مما يدل على قدرتها على المنافسة والفوز في بعض المباريات. هذه النتائج تعكس الفجوة الحالية بين الفرق الأفريقية والفرق الرائدة عالميًا، وتشير إلى الحاجة المستمرة لمزيد من الاستثمار في برامج التطوير والتدريب لاكتساب الخبرة ورفع المستوى التنافسي في كرة السلة على الكراسي المتحركة بالقارة الأفريقية.</p>
             </section>
 
             <section class="bg-white/10 rounded-2xl p-6 shadow-2xl backdrop-blur-sm border border-white/20">
