--- a/gerfinal/index.html
+++ b/gerfinal/index.html
@@ -36,6 +36,11 @@
         .text-shadow {
             text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
         }
+        .podcast-container {
+            max-width: 600px; /* Adjust as needed for responsiveness */
+            margin-left: auto;
+            margin-right: auto;
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -180,6 +185,16 @@
                     </div>
                 </div>
                 <p class="text-center mt-6 max-w-3xl mx-auto text-[#B8C1EC]">تُظهر نتائج جنوب أفريقيا في هذه البطولة أنها واجهت تحديات كبيرة أمام القوى العالمية، حيث تعرضت لخسائر بفروقات كبيرة أمام فرق مثل الولايات المتحدة الأمريكية وبريطانيا وإيطاليا. ومع ذلك، حققت جنوب أفريقيا انتصارين مهمين ضد تايلاند، مما يدل على قدرتها على المنافسة والفوز في بعض المباريات. هذه النتائج تعكس الفجوة الحالية بين الفرق الأفريقية والفرق الرائدة عالميًا، وتشير إلى الحاجة المستمرة لمزيد من الاستثمار في برامج التطوير والتدريب لاكتساب الخبرة ورفع المستوى التنافسي في كرة السلة على الكراسي المتحركة بالقارة الأفريقية.</p>
+            </section>
+
+            <section class="bg-white/10 rounded-2xl p-6 shadow-2xl backdrop-blur-sm border border-white/20">
+                <h2 class="text-3xl font-bold text-center mb-6 text-[#FF8906]">بودكاست: نظرة متعمقة على البطولة</h2>
+                <p class="text-center mb-8 max-w-3xl mx-auto">استمع إلى تحليل مفصل لأبرز أحداث ونتائج بطولة العالم IWBF تحت 23 عاماً 2025 في هذا البودكاست الحصري.</p>
+                <div class="podcast-container">
+                    <iframe src="https://audio.com/embed/audio/1835586387812351?theme=image"
+                        style="display:block; border-radius: 1px; border: none; height: 204px; width: 100%; max-width: 600px;"></iframe>
+                    <a href='https://audio.com/absi' style="text-align: center; display: block; color: #A4ABB6; font-size: 12px; font-family: sans-serif; line-height: 16px; margin-top: 8px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">@absi</a>
+                </div>
             </section>
 
             <section class="bg-white/10 rounded-2xl p-6 shadow-2xl backdrop-blur-sm border border-white/20">
