--- a/statsc/index.html
+++ b/statsc/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -63,7 +63,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-3 gap-8 items-center text-center">
                     <div class="col-span-full sm:col-span-1 bg-[#CAF0F8] text-[#0077B6] rounded-xl p-6 shadow-lg">
                         <h3 class="text-2xl font-bold mb-2">إجمالي النقاط المسجلة</h3>
-                        <p class="text-7xl font-extrabold text-[#00B4D8]">266</p>
+                        <p class="text-7xl font-extrabold text-[#00B4D8]">388</p>
                         <p class="text-2xl font-semibold mt-2">نقطة</p>
                         <p class="text-sm text-gray-600 mt-4">مجموع النقاط من الأندية البارزة</p>
                     </div>
@@ -137,6 +137,54 @@
                             <h4 class="font-bold text-sm">التوازن</h4>
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <!-- New Section for Detailed Club Statistics -->
+            <section class="magazine-section">
+                <h2 class="text-4xl font-extrabold text-[#0077B6] mb-8 text-center">تحليل أداء الأندية في البطولة</h2>
+                <p class="text-center text-gray-700 leading-relaxed mb-10">شهدت البطولة مستويات أداء متباينة بين الأندية، حيث تميز كل فريق بخصائص فريدة أثرت على مسيرته. إليكم تفصيل لأداء الفرق المشاركة:</p>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-10">
+                    <div class="bg-[#E0F7FA] rounded-xl p-6 shadow-lg border border-[#00B4D8] flex flex-col items-center text-center">
+                        <h3 class="text-2xl font-bold text-[#0077B6] mb-3">نادي بنغازي</h3>
+                        <p class="text-5xl font-extrabold text-[#0096C7]">138</p>
+                        <p class="text-lg font-semibold text-gray-700 mb-3">نقطة إجمالية</p>
+                        <p class="text-sm text-gray-600 leading-relaxed">سجل أعلى مجموع نقاط في البطولة (42، 44، 52)، مما يعكس قوته الهجومية. كما تميز بمنظومة دفاعية صلبة تُعد نموذجًا لباقي الفرق، مما مكنه من فرض سيطرته على مجريات اللعب والوصول إلى مراحل متقدمة.</p>
+                    </div>
+                    <div class="bg-[#E0F7FA] rounded-xl p-6 shadow-lg border border-[#00B4D8] flex flex-col items-center text-center">
+                        <h3 class="text-2xl font-bold text-[#0077B6] mb-3">نادي التضامن مصراتة</h3>
+                        <p class="text-5xl font-extrabold text-[#0096C7]">93</p>
+                        <p class="text-lg font-semibold text-gray-700 mb-3">نقطة إجمالية</p>
+                        <p class="text-sm text-gray-600 leading-relaxed">قدم مستوى هجوميًا جيدًا للغاية (31، 29، 33)، مما يعكس قوته الهجومية. ومع ذلك، عانى الفريق من ضعف في الأداء الدفاعي في اللحظات الحاسمة من المباريات، وهو ما أثر على نتائجه النهائية ويحتاج إلى تطوير مستقبلاً.</p>
+                    </div>
+                    <div class="bg-[#E0F7FA] rounded-xl p-6 shadow-lg border border-[#00B4D8] flex flex-col items-center text-center">
+                        <h3 class="text-2xl font-bold text-[#0077B6] mb-3">نادي طرابلس</h3>
+                        <p class="text-5xl font-extrabold text-[#0096C7]">79</p>
+                        <p class="text-lg font-semibold text-gray-700 mb-3">نقطة إجمالية</p>
+                        <p class="text-sm text-gray-600 leading-relaxed">حافظ على تماسكه في أغلب المباريات وقدم أداءً متوازنًا (20، 15، 44). لكنه عانى هجوميًا أمام الدفاع القوي لنادي بنغازي في المباراة النهائية، مما أثر على فرصته في الفوز باللقب.</p>
+                    </div>
+                    <div class="bg-[#E0F7FA] rounded-xl p-6 shadow-lg border border-[#00B4D8] flex flex-col items-center text-center">
+                        <h3 class="text-2xl font-bold text-[#0077B6] mb-3">نادي التضامن طرابلس</h3>
+                        <p class="text-5xl font-extrabold text-[#0096C7]">78</p>
+                        <p class="text-lg font-semibold text-gray-700 mb-3">نقطة إجمالية</p>
+                        <p class="text-sm text-gray-600 leading-relaxed">أظهر أداءً تنافسيًا (17، 25، 36) وحافظ على حضوره في البطولة. بالرغم من عدم وصوله للمراكز المتقدمة، إلا أن الفريق قدم مباريات قوية تعكس جهود لاعبيه.</p>
+                    </div>
+                </div>
+
+                <h3 class="text-3xl font-bold text-center text-[#0077B6] mb-6">مجموع نقاط الأندية</h3>
+                <p class="text-center text-gray-600 mb-8">يوضح هذا المخطط مقارنة مباشرة بين مجموع النقاط التي سجلتها الأندية الأربعة البارزة في البطولة، مما يبرز الفروقات في الأداء الهجومي لكل فريق.</p>
+                <div class="chart-container">
+                    <canvas id="clubPointsChart"></canvas>
+                </div>
+            </section>
+
+            <!-- Social Media Embed Section -->
+            <section class="magazine-section text-center">
+                <h2 class="text-4xl font-extrabold text-[#0077B6] mb-8">منشورات البطولة على فيسبوك</h2>
+                <p class="text-lg text-gray-700 leading-relaxed mb-8">تابعوا أبرز اللحظات والتحديثات مباشرةً من صفحة اللجنة البارالمبية الليبية على فيسبوك:</p>
+                <div class="flex justify-center">
+                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fparalympicly%2Fposts%2Fpfbid0ymj8M4cKoNz69gLv2eUUWbWtV6wGoqzKVoXTf5fNg4pS44NZbr9xtUgmR6P35dK5l&show_text=true&width=500" width="500" height="772" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" class="max-w-full h-auto"></iframe>
                 </div>
             </section>
 
@@ -237,9 +285,68 @@
             }
         });
 
-        // clubPointsChart is removed, so its context and chart initialization are also removed.
-        // const clubPointsCtx = document.getElementById('clubPointsChart').getContext('2d');
-        // const clubPointsChart = new Chart(clubPointsCtx, { /* ... */ });
+        const clubPointsCtx = document.getElementById('clubPointsChart').getContext('2d');
+        const clubPointsChart = new Chart(clubPointsCtx, {
+            type: 'bar',
+            data: {
+                labels: [wrapText('نادي بنغازي'), wrapText('نادي التضامن مصراتة'), wrapText('نادي طرابلس'), wrapText('نادي التضامن طرابلس')],
+                datasets: [{
+                    label: 'مجموع النقاط',
+                    data: [138, 93, 79, 78], /* Updated data for نادي طرابلس */
+                    backgroundColor: ['#00B4D8', '#0096C7', '#0077B6', '#00B4D8'], /* Energetic & Playful palette */
+                    borderColor: ['#0077B6', '#0077B6', '#0077B6', '#0077B6'],
+                    borderWidth: 2,
+                    borderRadius: 8,
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                plugins: {
+                    legend: {
+                        display: false
+                    },
+                    tooltip: {
+                        rtl: true,
+                        callbacks: {
+                            title: function(tooltipItems) {
+                                const item = tooltipItems[0];
+                                let label = item.chart.data.labels[item.dataIndex];
+                                if (Array.isArray(label)) {
+                                  return label.join(' ');
+                                } else {
+                                  return label;
+                                }
+                            }
+                        }
+                    }
+                },
+                scales: {
+                    y: {
+                        beginAtZero: true,
+                        grid: {
+                            color: '#e0e0e0'
+                        },
+                        ticks: {
+                           font: {
+                               family: "'Cairo', sans-serif"
+                           }
+                        }
+                    },
+                    x: {
+                        grid: {
+                            display: false
+                        },
+                        ticks: {
+                           font: {
+                               family: "'Cairo', sans-serif",
+                               size: 14
+                           }
+                        }
+                    }
+                }
+            }
+        });
     </script>
 </body>
 </html>
