--- a/statsc/index.html
+++ b/statsc/index.html
@@ -193,7 +193,8 @@
         <footer class="text-center mt-12 py-6 bg-[#0077B6] text-white rounded-t-3xl shadow-lg">
             <p class="text-md text-[#90E0EF]">تصميم: عبدالسلام شليبك</p>
             <p class="text-sm mt-1 text-white/80">الموقع الرسمي: <a href="http://www.absi.cc" target="_blank" class="underline text-[#90E0EF] hover:text-white">www.absi.cc</a></p>
-            <p class="text-sm mt-1 text-white/80">إحصائيات من اللجنة الفنية للكراسي المتحركة</p>
+            <p class="text-sm mt-1 text-white/80">إحصائيات من اللجنة الفنية العليا للعبة كرة السلة على الكراسي المتحركة في ليبيا 
+</p>
         </footer>
     </div>
 
