--- a/absitimes/index.html
+++ b/absitimes/index.html
@@ -1,9 +1,24 @@
-﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNSMIL Meeting Report - The Libyan Forum</title>
+
+    <!-- === Open Graph (OG) Meta Tags for Social Media === -->
+    <meta property="og:title" content="Disability Advocates Meet UN Mission, Demand &quot;Genuine and Effective Representation&quot;">
+    <meta property="og:description" content="Consultative meeting in Tripoli focuses on &#39;implementation gap&#39; and political participation challenges.">
+    <meta property="og:image" content="https://substackcdn.com/image/fetch/$s_!kxng!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Fa166bce5-fa80-49ff-b57e-e92021dabe7c_1200x695.png">
+    <meta property="og:url" content="https://www.absi.cc/article-placeholder"> <!-- يمكنك تغيير هذا الرابط لاحقاً -->
+    <meta property="og:type" content="article">
+    <meta property="og:site_name" content="absi times">
+
+    <!-- === Twitter Card Meta Tags === -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Disability Advocates Meet UN Mission, Demand &quot;Genuine and Effective Representation&quot;">
+    <meta name="twitter:description" content="Consultative meeting in Tripoli focuses on &#39;implementation gap&#39; and political participation challenges.">
+    <meta name="twitter:image" content="https://substackcdn.com/image/fetch/$s_!kxng!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Fa166bce5-fa80-49ff-b57e-e92021dabe7c_1200x695.png">
+    <meta name="twitter:creator" content="@absily">
+
     <!-- Tailwind CSS --><script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Google Fonts for a classic newspaper look (Playfair Display for serif, Lato for sans-serif) --><link rel="preconnect" href="https://fonts.googleapis.com">
