--- a/absitimes/index.html
+++ b/absitimes/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNSMIL Meeting Report - The Libyan Forum</title>
+    <title>UNSMIL Meeting Report - absi times </title>
 
     <!-- === Open Graph (OG) Meta Tags for Social Media === -->
     <meta property="og:title" content="Disability Advocates Meet UN Mission, Demand &quot;Genuine and Effective Representation&quot;">
@@ -190,3 +190,4 @@
 
 </body>
 </html>
+
