--- a/disability-survey/public/index.html
+++ b/disability-survey/public/index.html
@@ -36,9 +36,28 @@
                     <option value="حركية">إعاقة حركية</option>
                     <option value="بصرية">إعاقة بصرية</option>
                     <option value="سمعية">إعاقة سمعية</option>
+                    <option value="ذهنية">إعاقة ذهنية</option>
+                    <option value="نفسية">إعاقة نفسية</option>
+                    <option value="أخرى">أخرى</option>
+                </select>
             </div>
 
-            <script src="script.js"></script>
+            <div class="form-group captcha-group">
+                <label>رمز التحقق</label>
+                <div class="captcha-container">
+                    <canvas id="captchaCanvas" width="150" height="50"></canvas>
+                    <button type="button" id="refreshCaptcha" title="تحديث الرمز">↻</button>
+                </div>
+                <input type="text" id="captchaInput" name="captcha" required placeholder="أدخل الرمز الظاهر">
+            </div>
+
+            <button type="submit" id="submitBtn">إرسال البيانات</button>
+        </form>
+
+        <div id="message" class="message hidden"></div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
