--- a/disability-survey/public/index.html
+++ b/disability-survey/public/index.html
@@ -5,13 +5,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>استبيان الاعاقة في ليبيا</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <!DOCTYPE html>
+    <html lang="ar" dir="rtl">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>استبيان الاعاقة في ليبيا</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+    </head>
 
 <body>
+    <div class="container">
+        <header>
+            <h1>استبيان الاعاقة في ليبيا</h1>
+            <p>نرجو منكم تعبئة النموذج التالي للمساهمة في قاعدة البيانات الوطنية</p>
+        </header>
+
+        <!-- Hidden Iframe for submission -->
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+
+        <!-- Form targets the hidden iframe -->
+        <form id="surveyForm" target="hidden_iframe" method="POST"
+            action="https://script.google.com/macros/s/AKfycbxYyj_-GKMHOhgHCHKu4HQ6XKrEzLQHVSxZhwHhLT_38KAby4KXqejiw4HCHxMVZQv1_Q/exec">
+            <div class="form-group">
+                <label for="name">الاسم الثلاثي</label>
+                <input type="text" id="name" name="name" required placeholder="أدخل اسمك الكامل">
+            </div>
+
+            <div class="form-group">
+                <label for="email">البريد الإلكتروني</label>
+                <input type="email" id="email" name="email" required placeholder="example@domain.com">
+            </div>
+
+            <div class="form-group">
+                <label for="disability_type">نوع الإعاقة</label>
+                <select id="disability_type" name="disability_type" required>
+                    <option value="" disabled selected>اختر نوع الإعاقة</option>
+                    <option value="حركية">إعاقة حركية</option>
+                    <option value="بصرية">إعاقة بصرية</option>
+                    <option value="سمعية">إعاقة سمعية</option>
+                    <option value="ذهنية">إعاقة ذهنية</option>
+                    <option value="نفسية">إعاقة نفسية</option>
+                    <option value="أخرى">أخرى</option>
+                </select>
+            </div>
+
+            <div class="form-group captcha-group">
+                <label>رمز التحقق</label>
+                <div class="captcha-container">
+                    <canvas id="captchaCanvas" width="150" height="50"></canvas>
+                    <button type="button" id="refreshCaptcha" title="تحديث الرمز">↻</button>
+                </div>
+                <input type="text" id="captchaInput" name="captcha" required placeholder="أدخل الرمز الظاهر">
+            </div>
+
+            <button type="submit" id="submitBtn">إرسال البيانات</button>
+        </form>
+
+        <div id="message" class="message hidden"></div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
