--- a/disability-survey/public/index.html
+++ b/disability-survey/public/index.html
@@ -14,8 +14,29 @@
 <body>
     <div class="container">
         <header>
-            <h1>استبيان الاعاقة في ليبيا</h1>
-            <p>نرجو منكم تعبئة النموذج التالي للمساهمة في قاعدة البيانات الوطنية</p>
+            <div class="brand-header">
+                <!-- Disability Logo Removed -->
+
+                <div class="title-container">
+                    <h1>استبيان الاعاقة في ليبيا</h1>
+                    <p>نموذج تجريبي لغرض الدراسة والتطوير (غير رسمي)</p>
+                </div>
+
+                <div class="logo-container">
+                    <!-- Libya Flag (SVG) -->
+                    <svg class="logo-icon" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="36" height="8" fill="#E70013" />
+                        <rect y="8" width="36" height="8" fill="black" />
+                        <rect y="16" width="36" height="8" fill="#239E46" />
+                        <path
+                            d="M18 9.5C16.9 9.5 16 10.4 16 11.5C16 12.6 16.9 13.5 18 13.5C18.3 13.5 18.5 13.4 18.8 13.3C18.4 14 17.7 14.5 16.9 14.5C15.5 14.5 14.4 13.4 14.4 12C14.4 10.6 15.5 9.5 16.9 9.5C17.3 9.5 17.7 9.6 18 9.8V9.5Z"
+                            fill="white" />
+                        <path
+                            d="M19.5 11.2L19.7 11.8H20.3L19.8 12.2L20 12.8L19.5 12.4L19 12.8L19.2 12.2L18.7 11.8H19.3L19.5 11.2Z"
+                            fill="white" />
+                    </svg>
+                </div>
+            </div>
         </header>
 
         <!-- Hidden Iframe for submission -->
@@ -60,6 +81,10 @@
         </form>
 
         <div id="message" class="message hidden"></div>
+
+        <footer>
+            <p>جميع الحقوق محفوظة لـ <a href="http://www.absi.cc" target="_blank">مدونة عبدالسلام شليبك</a></p>
+        </footer>
     </div>
 
     <script src="script.js"></script>
