--- a/disability-survey/public/index.html
+++ b/disability-survey/public/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,8 +16,6 @@
     <div class="container">
         <header>
             <div class="brand-header">
-                <!-- Disability Logo Removed -->
-
                 <div class="title-container">
                     <h1>استبيان الاعاقة في ليبيا</h1>
                     <p>نموذج تجريبي لغرض الدراسة والتطوير (غير رسمي)</p>
@@ -83,6 +82,14 @@
         <div id="message" class="message hidden"></div>
 
         <footer>
+            <div class="social-links">
+                <a href="https://x.com/absily" target="_blank" class="social-icon" title="X (Twitter)"><i
+                        class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://facebook.com/absily" target="_blank" class="social-icon" title="Facebook"><i
+                        class="fa-brands fa-facebook"></i></a>
+                <a href="https://linkedin.com/in/absily" target="_blank" class="social-icon" title="LinkedIn"><i
+                        class="fa-brands fa-linkedin"></i></a>
+            </div>
             <p>جميع الحقوق محفوظة لـ <a href="http://www.absi.cc" target="_blank">مدونة عبدالسلام شليبك</a></p>
         </footer>
     </div>
