--- a/disability-survey/public/index.html
+++ b/disability-survey/public/index.html
@@ -37,6 +37,7 @@
                 </div>
             </div>
         </header>
+        <div id="current-time" class="time-display"></div>
 
         <!-- Hidden Iframe for submission -->
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
