--- a/disability-survey/public/index.html
+++ b/disability-survey/public/index.html
@@ -91,6 +91,9 @@
                 <a href="https://linkedin.com/in/absily" target="_blank" class="social-icon" title="LinkedIn"><i
                         class="fa-brands fa-linkedin"></i></a>
             </div>
+            <p><a href="mailto:me@absi.ly"
+                    style="color: var(--primary-color); text-decoration: none; font-weight: bold; margin-bottom: 10px; display: inline-block;">me@absi.ly</a>
+            </p>
             <p><a href="privacy.html"
                     style="color: var(--secondary-color); text-decoration: underline; margin-left: 10px;">سياسة الخصوصية
                     (GDPR)</a></p>
