--- a/disability-survey/public/privacy.html
+++ b/disability-survey/public/privacy.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
+        /* Override container width for privacy page to allow more reading space */
+        .container {
+            max-width: 800px;
+        }
+
         .privacy-content {
             text-align: right;
             line-height: 1.8;
@@ -104,8 +109,8 @@
             </ul>
 
             <h2>5. تواصل معنا</h2>
-            <p>إذا كان لديك أي استفسارات حول سياسة الخصوصية، يمكنك التواصل معنا عبر البريد الإلكتروني أو وسائل التواصل
-                الاجتماعي الموضحة في الموقع.</p>
+            <p>إذا كان لديك أي استفسارات حول سياسة الخصوصية، يمكنك التواصل معنا عبر البريد الإلكتروني: <a
+                    href="mailto:me@absi.ly">me@absi.ly</a> أو وسائل التواصل الاجتماعي الموضحة في الموقع.</p>
 
             <a href="index.html" class="back-btn">العودة إلى الصفحة الرئيسية</a>
         </div>
