--- a/disability-survey/public/index.html
+++ b/disability-survey/public/index.html
@@ -14,6 +14,15 @@
 
 <body>
     <div class="container">
+        <div class="disclaimer-banner" id="disclaimerBanner">
+            <div class="disclaimer-content">
+                <i class="fa-solid fa-circle-exclamation"></i>
+                <span>تنويه: هذا النموذج هو تجربة شخصية غير رسمية لغرض الدراسة والتطوير.</span>
+            </div>
+            <button class="close-disclaimer" id="closeDisclaimer" title="إغلاق التنويه"><i
+                    class="fa-solid fa-xmark"></i></button>
+        </div>
+
         <header>
             <div class="brand-header">
                 <div class="title-container">
