--- a/meeting-survey/article.html
+++ b/meeting-survey/article.html
@@ -281,7 +281,8 @@
         </article>
 
         <footer>
-            <p>تصميم وتطوير: عبدالسلام مصطفى شليبك &copy; 2025</p>
+            <p>تصميم وتطوير: <a href="http://www.absi.cc" target="_blank"
+                    style="color: inherit; text-decoration: none;">عبدالسلام مصطفى شليبك</a> &copy; 2025</p>
         </footer>
     </div>
 </body>
