--- a/meeting-survey/index.html
+++ b/meeting-survey/index.html
@@ -222,7 +222,9 @@
         </main>
 
         <footer>
-            <p>تصميم وتطوير: عبدالسلام مصطفى شليبك &copy; 2025</p>
+            <p>تصميم وتطوير: <a href="http://www.absi.cc" target="_blank"
+                    style="color: inherit; text-decoration: none;">عبدالسلام مصطفى شليبك</a> &copy; 2025 | <a
+                    href="privacy.html" style="color: var(--accent-gold); text-decoration: none;">سياسة الخصوصية</a></p>
         </footer>
     </div>
 
