--- a/meeting-survey/index.html
+++ b/meeting-survey/index.html
@@ -10,23 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css?v=2">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-    <!-- Social Media Meta Tags (Open Graph) -->
-    <meta property="og:title" content="استبيان تصحيح المسار - الهيئة العامة لصندوق التضامن الاجتماعي">
-    <meta property="og:description"
-        content="شاركنا رأيك في مخرجات الاجتماع التقابلي الأول. هل يؤسس هذا الاجتماع لعقد اجتماعي جديد بين التضامن وذوي الإعاقة؟ صوتك يهمنا.">
-    <meta property="og:image" content="libya_gold_creative_v2.png">
-    <meta property="og:url" content=""> <!-- سيتم تعبئته تلقائياً عند النشر -->
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="ar_LY">
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="استبيان تصحيح المسار - الهيئة العامة لصندوق التضامن الاجتماعي">
     <meta name="twitter:description"
         content="شاركنا رأيك في مخرجات الاجتماع التقابلي الأول. هل يؤسس هذا الاجتماع لعقد اجتماعي جديد؟">
-    <meta name="twitter:image" content="libya_gold_creative_v2.png">
+    <meta name="twitter:image" content="https://absily.github.io/meeting-survey/libya_gold_creative_v2.png">
 </head>
 
 <body>
