--- a/meeting-survey/article.html
+++ b/meeting-survey/article.html
@@ -99,6 +99,26 @@
     text-align: center;
     margin: 20px 0;
     }
+    /* Mobile Responsiveness */
+    @media (max-width: 768px) {
+    .article-container {
+    padding: 20px;
+    margin: 20px auto;
+    }
+
+    .article-title {
+    font-size: 1.8rem;
+    }
+
+    .article-content {
+    font-size: 1.1rem;
+    }
+
+    .article-content iframe {
+    width: 100% !important;
+    height: auto !important;
+    }
+    }
     </style>
 </head>
 
