--- a/meeting-survey/privacy.html
+++ b/meeting-survey/privacy.html
@@ -39,6 +39,21 @@
             padding-bottom: 10px;
         }
 
+        .privacy-content p {
+            margin-bottom: 15px;
+            color: #e0e0e0;
+        }
+
+        .privacy-content ul {
+            list-style-type: disc;
+            margin-right: 25px;
+            margin-bottom: 20px;
+        }
+
+        .privacy-content li {
+            margin-bottom: 10px;
+        }
+
         .back-btn {
             display: inline-block;
             margin-top: 30px;
@@ -62,6 +77,51 @@
             margin-top: 50px;
             padding: 20px;
             border-top: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        /* Mobile Responsiveness */
+        @media (max-width: 768px) {
+            .privacy-container {
+                margin: 15px auto;
+                padding: 25px 20px;
+                width: 92%;
+                border-radius: 16px;
+                background: rgba(10, 20, 25, 0.95);
+                border: 1px solid rgba(212, 175, 55, 0.15);
+            }
+
+            .privacy-content h1 {
+                font-size: 1.6rem;
+                margin-bottom: 25px;
+                line-height: 1.4;
+            }
+
+            .privacy-content h2 {
+                font-size: 1.3rem;
+                margin-top: 30px;
+                padding-bottom: 12px;
+            }
+
+            .privacy-content p,
+            .privacy-content li {
+                font-size: 1.1rem;
+                line-height: 1.8;
+                color: #ffffff;
+                text-align: justify;
+            }
+
+            .privacy-content ul {
+                margin-right: 20px;
+                padding-left: 10px;
+            }
+
+            .back-btn {
+                width: 100%;
+                display: block;
+                padding: 15px;
+                font-size: 1.1rem;
+                margin-top: 40px;
+            }
         }
     </style>
 </head>
