--- a/meeting-survey/privacy.html
+++ b/meeting-survey/privacy.html
@@ -82,37 +82,45 @@
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
             .privacy-container {
-                margin: 15px auto;
-                padding: 25px 20px;
-                width: 92%;
-                border-radius: 16px;
+                margin: 0;
+                padding: 30px 15px;
+                width: 100%;
+                max-width: 100%;
+                border-radius: 0;
                 background: rgba(10, 20, 25, 0.95);
-                border: 1px solid rgba(212, 175, 55, 0.15);
+                border: none;
+                border-bottom: 1px solid rgba(212, 175, 55, 0.15);
+            }
+
+            .container {
+                padding: 0;
+                /* Remove container padding if any */
             }
 
             .privacy-content h1 {
-                font-size: 1.6rem;
-                margin-bottom: 25px;
-                line-height: 1.4;
+                font-size: 1.5rem;
+                margin-bottom: 20px;
+                line-height: 1.3;
             }
 
             .privacy-content h2 {
-                font-size: 1.3rem;
-                margin-top: 30px;
-                padding-bottom: 12px;
+                font-size: 1.25rem;
+                margin-top: 25px;
+                padding-bottom: 10px;
             }
 
             .privacy-content p,
             .privacy-content li {
                 font-size: 1.1rem;
-                line-height: 1.8;
+                line-height: 1.7;
                 color: #ffffff;
                 text-align: justify;
+                margin-bottom: 15px;
             }
 
             .privacy-content ul {
-                margin-right: 20px;
-                padding-left: 10px;
+                margin-right: 15px;
+                padding-left: 5px;
             }
 
             .back-btn {
@@ -120,7 +128,9 @@
                 display: block;
                 padding: 15px;
                 font-size: 1.1rem;
-                margin-top: 40px;
+                margin-top: 30px;
+                border-radius: 8px;
+                /* Less rounded on mobile */
             }
         }
     </style>
