--- a/meeting-survey/article.html
+++ b/meeting-survey/article.html
@@ -308,6 +308,13 @@
                 شليبك، وفوزي الفاضلي، وصلاح كحيل، والذين وضعوا الملفات الشائكة على طاولة "الالتزام" بدلاً من "الوعود"،
                 متسلحين بخبرتهم المباشرة في ملامسة هموم الشريحة يومياً.</p>
 
+            <!-- Infographic -->
+            <figure>
+                <img src="infographic.jpg" alt="إنفوجرافيك ملخص الاجتماع: تصحيح المسار">
+                <figcaption style="text-align: center; color: #777; font-size: 0.9rem; margin-top: 10px;">ملخص بصري
+                    لمخرجات اجتماع "تصحيح المسار"</figcaption>
+            </figure>
+
             <!-- Facebook Embed 1 -->
             <div class="fb-post-container">
                 <iframe
