--- a/arabparaforum/index.html
+++ b/arabparaforum/index.html
@@ -678,10 +678,17 @@
                 <label>اللون الرئيسي للموقع (لون التمييز)</label>
                 <input type="color" id="config-color" value="#0056b3" style="height:50px; cursor:pointer;">
             </div>
-            <div class="input-group" style="display:flex; align-items:center; gap:10px; margin-top:20px;">
-                <input type="checkbox" id="config-guests" style="width:20px; height:20px;">
-                <label for="config-guests" style="margin:0; font-size:14px; cursor:pointer;">✅ السماح للزوار بالنشر
-                    (Guest Posting)</label>
+            <div class="input-group"
+                style="display:flex; align-items:center; gap:20px; margin-top:20px; flex-wrap:wrap;">
+                <div style="display:flex; align-items:center; gap:8px;">
+                    <input type="checkbox" id="config-guests" style="width:20px; height:20px;">
+                    <label for="config-guests" style="margin:0; font-size:14px; cursor:pointer;">✅ كتابة الزوار</label>
+                </div>
+                <div style="display:flex; align-items:center; gap:8px;">
+                    <input type="checkbox" id="config-guest-votes" style="width:20px; height:20px;">
+                    <label for="config-guest-votes" style="margin:0; font-size:14px; cursor:pointer;">✅ تصويت
+                        الزوار</label>
+                </div>
             </div>
 
             <div class="input-group" style="margin-top:15px; border-top:1px solid #eee; padding-top:10px;">
@@ -774,7 +781,8 @@
         // STATE
         let currentUser = null;
         let postsData = [];
-        let appConfig = { title: "Paralympic بالعربي", logo: "", desc: "مساحة للنقاش", allowGuests: false }; // Defaults
+
+        let appConfig = { title: "Paralympic بالعربي", logo: "", desc: "مساحة للنقاش", allowGuests: false, allowGuestVotes: false }; // Defaults
         let postsLimit = 10;
         let postsUnsubscribe = null;
         let pendingDelete = null; // MOVED HERE FOR SAFETY
@@ -839,6 +847,7 @@
             document.getElementById('config-desc').value = appConfig.desc || '';
             document.getElementById('config-color').value = appConfig.themeColor || '#0056b3';
             document.getElementById('config-guests').checked = appConfig.allowGuests || false;
+            document.getElementById('config-guest-votes').checked = appConfig.allowGuestVotes || false;
             document.getElementById('config-banner').value = appConfig.bannerHtml || '';
             document.getElementById('settings-modal').style.display = 'flex';
         };
@@ -853,7 +862,9 @@
                 logo: document.getElementById('config-logo').value,
                 desc: document.getElementById('config-desc').value,
                 themeColor: document.getElementById('config-color').value,
+                themeColor: document.getElementById('config-color').value,
                 allowGuests: document.getElementById('config-guests').checked,
+                allowGuestVotes: document.getElementById('config-guest-votes').checked,
                 bannerHtml: document.getElementById('config-banner').value
             };
 
@@ -999,7 +1010,17 @@
         };
 
         window.vote = async (postId, optionId) => {
-            if (!currentUser) return alert("سجل دخولك لتتمكن من التصويت! 🗳️");
+            const isGuest = !currentUser;
+            // CHECK PERMISSION
+            if (isGuest && !appConfig.allowGuestVotes) return alert("سجل دخولك لتتمكن من التصويت! 🗳️");
+
+            // GET VOTER ID (User UID or Persistent Guest ID)
+            let voterId = currentUser ? currentUser.uid : localStorage.getItem('guest_voter_id');
+            if (!voterId) {
+                voterId = "guest_" + Date.now() + Math.random().toString(36).substr(2, 5);
+                localStorage.setItem('guest_voter_id', voterId);
+            }
+
             const postRef = doc(db, "posts", postId);
 
             try {
@@ -1008,7 +1029,7 @@
                     if (!postDoc.exists()) throw "الموضوع محذوف!";
 
                     const data = postDoc.data();
-                    if (data.voters && data.voters.includes(currentUser.uid)) {
+                    if (data.voters && data.voters.includes(voterId)) {
                         throw "لقد قمت بالتصويت مسبقاً! ✅";
                     }
 
@@ -1017,10 +1038,11 @@
                         return opt;
                     });
 
-                    const newVoters = data.voters ? [...data.voters, currentUser.uid] : [currentUser.uid];
+                    const newVoters = data.voters ? [...data.voters, voterId] : [voterId];
 
                     transaction.update(postRef, { pollOptions: newOptions, voters: newVoters });
                 });
+                // alert("تم التصويت بنجاح! شكراً لمشاركتك 🎉", true); // Optional success msg
             } catch (e) {
                 alert(e);
             }
